ISecure: mobile overflow-x fixed

--- a/Projects/ISecure/style/main.css
+++ b/Projects/ISecure/style/main.css
@@ -27,7 +27,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: var(--bg);
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   max-width: 1440px;
   width: 100%;
   margin: auto;
@@ -566,7 +566,7 @@ footer li a > img {
 }
 @media screen and (max-width: 850px) {
   .contact-ball {
-    width: 30rem;
+    width: 100vw;
     height: 45rem;
   }
   .contact {
